--- a/src/components/User/User.css
+++ b/src/components/User/User.css
@@ -4,6 +4,9 @@
     cursor: pointer;
 
 }
+.user-wrapper:hover{
+    background: #EBEBEB;
+}
 .user-info{
     display: flex;
     justify-content: space-between;
@@ -15,6 +18,7 @@
     align-items: center;
 
 }
+
 .user-detail h4{
     margin-left: 10px;
 }
@@ -22,7 +26,7 @@
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    border: 1px solid #F1F1F1;
+    border: 1px solid #EBEBEB;
 }
 .avatar:hover{
     opacity: 0.7;
