--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: #115293;
-  color:#fff;
+  background: #F5F5F5;
+  color:#000;
 }
 
 code {
