--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -35,3 +35,8 @@
     opacity: 0.8;
     text-align: center;
 }
+.messages{
+    height: calc(100vh - 200px);
+    overflow-y: auto;
+    border-bottom: 1px solid #EBEBEB;
+}
