--- a/src/components/Message/Message.css
+++ b/src/components/Message/Message.css
@@ -11,10 +11,11 @@
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
 }
-.message-wrapper p:hover{
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+.message-wrapper p:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 .message-wrapper small {
+  font-size: 10px;
   display: inline-block;
   margin-top: 5px;
   opacity: 0.8;
