--- a/src/components/MessageForm/MessageForm.css
+++ b/src/components/MessageForm/MessageForm.css
@@ -3,20 +3,13 @@
     bottom: 0;
     left: 2%;
     width: 100%;
-    height: 30px;
     display: flex;
     align-items: center;
 }
-.message-form input{
-    width: 60vw;
-    margin: 0 10px 10px;
-    padding: 10px;
-    border-radius: 5px;
-    outline: none;
-    border: none;
+.react-input-emoji--input{
+    width: 65vw !important; 
 }
 .message-form .message-form-btn{
-    margin-top: -10px;
     color: #fff;
     background-color: #1976D2;
     padding: 10px 20px;
