--- a/src/components/Message/Message.css
+++ b/src/components/Message/Message.css
@@ -3,11 +3,13 @@
   padding: 0 5px;
 }
 .message-wrapper p {
+  font-size: 14px;
   padding: 10px;
   display: inline-block;
   max-width: 50%;
+  word-wrap: break-word;
   text-align: left;
-  border-radius: 5px;
+  border-radius: 20px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
 }
