--- a/src/components/User/User.css
+++ b/src/components/User/User.css
@@ -22,6 +22,9 @@
 .user-detail h4{
     margin-left: 10px;
 }
+.selected-user{
+    background: #EBEBEB;
+}
 .avatar{
     width: 50px;
     height: 50px;
@@ -37,8 +40,25 @@
     border-radius: 50%;
 }
 .online{
-    background: chartreuse;
+    background: #32CD32;
 }
 .offline{
-    background: crimson;
+    background: #B22222;
+}
+.truncate{
+    font-size: 14px;
+    white-space: nowrap;
+    width: 90%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+.truncate strong{
+    margin-right: 10px;
+}
+.unread{
+    margin-left: 10px;
+    background: blue;
+    color: #fff;
+    padding: 2px 4px;
+    border-radius: 10px;
 }
