--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -15,6 +15,7 @@
   display: flex;
   align-items: center;
   border-bottom: 2px solid #ebebeb;
+  font-size: 16px;
 }
 .messages-container {
   position: relative;
@@ -24,10 +25,12 @@
   display: flex;
   padding: 10px;
   text-align: center;
+  align-items: center;
   border-bottom: 2px solid #ebebeb;
 }
 .messages-user h3 {
   margin-left: 10px;
+  font-size: 14px;
 }
 .no-conversation {
   font-size: 20px;
@@ -36,7 +39,7 @@
   text-align: center;
 }
 .messages {
-  height: calc(100vh - 220px);
+  height: calc(100vh - 190px);
   overflow-y: auto;
   border-bottom: 1px solid #ebebeb;
 }
